syntax = "proto3";
package modlogie.publish;
import "messages.proto";
option csharp_namespace = "Modlogie.Api.Publish";

service PublishService {
  rpc Add(AddRequest) returns(AddResponce);
  rpc Delete(DeleteRequest) returns(modlogie.messages.Reply);
}

message AddRequest {
  string type = 1;
  string article_id = 2;
  string content = 3;
  string group = 4;
  string base_url = 5;
  string url = 6;
}

message AddResponce {
  modlogie.messages.Error error = 1;
  string id = 2;
}

message DeleteRequest {
  string type = 1;
  string id = 2;
}